CMake: added archive instal location.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,6 +296,7 @@ endif()
 install (TARGETS blaspp
     EXPORT blasppTargets
     LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
     INCLUDES DESTINATION include
     )
 
