CMake: remove GNUMakefile from installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -324,6 +324,7 @@ install (EXPORT blasppTargets
 install(
     DIRECTORY include/
     DESTINATION include
+    FILES_MATCHING PATTERN "GNUMakefile" EXCLUDE
 )
 
 install (
