CMake: updated header installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,7 +325,7 @@ install (EXPORT blasppTargets
 install(
     DIRECTORY include/
     DESTINATION include
-    #FILES_MATCHING PATTERN "GNUMakefile" EXCLUDE
+    FILES_MATCHING PATTERN "*.h*"
 )
 
 install (
